--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="form-group">
                     <label>Image URL</label>
-                    <input type="url" id="productImage">
+                    <input type="file" id="productImage" accept="image/*">
                 </div>
                 <div class="form-group fullwidth">
                     <button type="submit" class="btn">Save Product</button>
