changes in the order and cart files with added dashboard features

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,6 +16,9 @@
                 <p>Welcome, <span id="admin-name">Admin</span></p>
             </div>
             <div>
+                <!-- NEW BUTTON HERE -->
+                <a href="admin-orders.html" class="btn-primary" style="text-decoration:none; margin-right: 10px;">Manage Orders</a>
+                
                 <button id="add-product-btn" class="btn-primary">+ Add New Item</button>
                 <button id="logout-btn" class="btn-secondary">Logout</button>
             </div>
