--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bytes Vault - Premium Electronics</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Navigation -->
+    <!-- Updated Navbar -->
     <nav class="navbar">
         <a href="index.html" class="nav-brand">Bytes Vault</a>
-        <div class="nav-links">
-            <a href="shop.html">Shop</a>
-            <a href="cart.html">Cart <span id="cart-count">(0)</span></a>
-            <a href="login.html" id="auth-link">Login</a>
+        <div class="nav-menu">
+            <a href="shop.html" class="nav-link">Shop</a>
+            <a href="cart.html" class="nav-link">Cart <span id="cart-count" class="badge" style="background:var(--primary); color:white; margin-left:5px;">(0)</span></a>
+            <a href="login.html" id="auth-link" class="nav-btn">Login</a>
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <div style="text-align: center; padding: 4rem 1rem; background: linear-gradient(135deg, #1a1a1a 0%, #2c3e50 100%); color: white;">
-        <h1 style="font-size: 3rem; margin-bottom: 1rem;">Upgrade Your Setup</h1>
-        <p style="font-size: 1.2rem; margin-bottom: 2rem; color: #ccc;">The best GPUs, CPUs, and Peripherals in one vault.</p>
-        <a href="shop.html" class="btn-primary" style="display: inline-block; width: auto; padding: 1rem 2rem;">Browse Catalog</a>
+    <!-- Hero Section (Updated to fit container) -->
+    <div style="text-align: center; padding: 6rem 1rem; background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); color: white; border-radius: 0 0 24px 24px; margin-top:-1px;">
+        <h1 style="font-size: 3.5rem; margin-bottom: 1rem; font-weight: 800; letter-spacing: -1px;">Upgrade Your Setup</h1>
+        <p style="font-size: 1.25rem; margin-bottom: 2.5rem; color: #94a3b8;">The best GPUs, CPUs, and Peripherals in one vault.</p>
+        <a href="shop.html" class="btn-primary" style="padding: 1rem 2.5rem; font-size: 1.1rem; border-radius: 50px;">Browse Catalog</a>
     </div>
 
     <!-- Featured Section -->
-    <div class="admin-container">
-        <h2 style="margin: 2rem 0;">New Arrivals</h2>
+    <div class="container">
+        <h2 style="margin: 3rem 0 1.5rem 0; font-size: 1.8rem;">New Arrivals</h2>
         <div class="product-grid" id="featured-grid">
             <!-- JS will populate this -->
+            <p style="grid-column: 1/-1; text-align: center; color: #64748b;">Loading premium gear...</p>
         </div>
     </div>
 
