--- a/public/shop.html
+++ b/public/shop.html
@@ -1,50 +1,97 @@
 <!-- public/shop.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catalog - Bytes Vault</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <a href="index.html" class="nav-brand">Bytes Vault</a>
-        <div class="nav-links">
-            <a href="shop.html" style="color:white">Shop</a>
-            <a href="cart.html">Cart <span id="cart-count">(0)</span></a>
-            <a href="login.html" id="auth-link">Login</a>
-        </div>
+      <a href="index.html" class="nav-brand">Bytes Vault</a>
+      <div class="nav-links">
+        <a href="shop.html" style="color: white">Shop</a>
+        <a href="cart.html">Cart <span id="cart-count">(0)</span></a>
+        <a href="login.html" id="auth-link">Login</a>
+      </div>
     </nav>
 
-    <div class="shop-container">
-        <!-- Sidebar -->
-            <div class="filter-group">
-                <h3>Category</h3>
-                <!-- Add "All" option -->
-                <div><input type="radio" name="cat" class="cat-filter" value="All" checked> All Products</div>
-                <!-- Updated List -->
-                <div><input type="radio" name="cat" class="cat-filter" value="GPU"> GPU</div>
-                <div><input type="radio" name="cat" class="cat-filter" value="CPU"> CPU</div>
-                <div><input type="radio" name="cat" class="cat-filter" value="Motherboard"> Motherboard</div>
-                <div><input type="radio" name="cat" class="cat-filter" value="RAM"> RAM</div>
-                <div><input type="radio" name="cat" class="cat-filter" value="Storage"> Storage</div>
-                <div><input type="radio" name="cat" class="cat-filter" value="Laptop"> Laptop</div>
-                <div><input type="radio" name="cat" class="cat-filter" value="Monitor"> Monitor</div>
-                <div><input type="radio" name="cat" class="cat-filter" value="Peripheral"> Peripheral</div>
-            </div>
+    <div class="shop-layout">
+      <!-- Sidebar -->
+      <aside class="filter-panel">
+        <div class="filter-panel__header">
+          <p class="eyebrow">Filters</p>
+          <h3>Browse by category</h3>
+          <p class="muted">Tap a pill to narrow the grid.</p>
+        </div>
 
-        <!-- Main Grid -->
-        <main>
-            <div class="product-grid" id="shop-grid">
-                <!-- JS Renders Cards Here -->
-                <p>Loading catalog...</p>
-            </div>
-        </main>
+        <div class="filter-options">
+          <label class="pill-option">
+            <input
+              type="radio"
+              name="cat"
+              class="cat-filter"
+              value="All"
+              checked
+            />
+            <span>All Products</span>
+          </label>
+          <label class="pill-option">
+            <input type="radio" name="cat" class="cat-filter" value="GPU" />
+            <span>GPU</span>
+          </label>
+          <label class="pill-option">
+            <input type="radio" name="cat" class="cat-filter" value="CPU" />
+            <span>CPU</span>
+          </label>
+          <label class="pill-option">
+            <input
+              type="radio"
+              name="cat"
+              class="cat-filter"
+              value="Motherboard"
+            />
+            <span>Motherboard</span>
+          </label>
+          <label class="pill-option">
+            <input type="radio" name="cat" class="cat-filter" value="RAM" />
+            <span>RAM</span>
+          </label>
+          <label class="pill-option">
+            <input type="radio" name="cat" class="cat-filter" value="Storage" />
+            <span>Storage</span>
+          </label>
+          <label class="pill-option">
+            <input type="radio" name="cat" class="cat-filter" value="Laptop" />
+            <span>Laptop</span>
+          </label>
+          <label class="pill-option">
+            <input type="radio" name="cat" class="cat-filter" value="Monitor" />
+            <span>Monitor</span>
+          </label>
+          <label class="pill-option">
+            <input
+              type="radio"
+              name="cat"
+              class="cat-filter"
+              value="Peripheral"
+            />
+            <span>Peripheral</span>
+          </label>
+        </div>
+      </aside>
+
+      <!-- Main Grid -->
+      <main class="shop-grid-wrapper">
+        <div class="product-grid" id="shop-grid">
+          <!-- JS Renders Cards Here -->
+          <p>Loading catalog...</p>
+        </div>
+      </main>
     </div>
 
     <script src="js/shop.js"></script>
     <script src="js/cart.js"></script>
-</body>
+  </body>
 </html>
