--- a/public/login.html
+++ b/public/login.html
@@ -1,32 +1,81 @@
 <!-- public/login.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Login | Bytes Vault</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="auth-container">
-    <div class="auth-header">
-      <h2>Login</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Login | Bytes Vault</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body class="auth-page">
+    <div class="auth-noise"></div>
+    <div class="auth-grid">
+      <div class="auth-hero">
+        <p class="eyebrow">Secure access</p>
+        <h1>Welcome back to Bytes Vault</h1>
+        <p class="muted">
+          Log in to sync carts, track orders, and keep your builds organized.
+        </p>
+        <div class="auth-highlights">
+          <span class="pill-soft">Faster checkout</span>
+          <span class="pill-soft">Order history</span>
+          <span class="pill-soft">Wishlist sync</span>
+        </div>
+      </div>
+
+      <div class="auth-card">
+        <div class="auth-card__header">
+          <a href="index.html" class="nav-brand" style="font-size: 1.25rem"
+            >Bytes Vault</a
+          >
+          <p class="muted">Sign in to continue</p>
+        </div>
+
+        <div
+          id="auth-errors"
+          class="form-alert hidden"
+          role="alert"
+          aria-live="polite"
+        ></div>
+
+        <form id="loginForm" class="auth-form">
+          <div class="form-group">
+            <label class="input-label" for="email">Email</label>
+            <div class="input-field">
+              <span class="input-icon">@</span>
+              <input
+                type="email"
+                id="email"
+                class="form-control"
+                placeholder="you@example.com"
+                required
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="input-label" for="password">Password</label>
+            <div class="input-field">
+              <span class="input-icon">•••</span>
+              <input
+                type="password"
+                id="password"
+                class="form-control"
+                placeholder="Your password"
+                required
+              />
+            </div>
+            <p class="field-hint">Use at least 6 characters.</p>
+          </div>
+          <button type="submit" class="btn-primary auth-submit">Login</button>
+        </form>
+
+        <div class="auth-footer">
+          <p class="muted">
+            No account? <a href="register.html">Create one</a>
+          </p>
+        </div>
+      </div>
     </div>
 
-    <form id="loginForm">
-      <div class="form-group">
-        <input type="email" id="email" class="form-control" placeholder="Email" required />
-      </div>
-      <div class="form-group">
-        <input type="password" id="password" class="form-control" placeholder="Password" required />
-      </div>
-      <button type="submit" class="btn-primary">Login</button>
-    </form>
-    
-    <div class="auth-footer">
-      <p>No account? <a href="register.html">Register</a></p>
-    </div>
-  </div>
-
-  <script src="js/login-logic.js"></script>
-</body>
+    <script src="js/login-logic.js"></script>
+  </body>
 </html>
