--- a/public/register.html
+++ b/public/register.html
@@ -1,35 +1,98 @@
 <!-- public/register.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Register | Bytes Vault</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="auth-container">
-    <div class="auth-header">
-      <h2>Create Account</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Register | Bytes Vault</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body class="auth-page">
+    <div class="auth-noise"></div>
+    <div class="auth-grid">
+      <div class="auth-hero">
+        <p class="eyebrow">Join the builders</p>
+        <h1>Create your Bytes Vault account</h1>
+        <p class="muted">
+          Save parts lists, sync carts, and track every order in one place.
+        </p>
+        <div class="auth-highlights">
+          <span class="pill-soft">Build history</span>
+          <span class="pill-soft">Secure checkout</span>
+          <span class="pill-soft">Quick reorders</span>
+        </div>
+      </div>
+
+      <div class="auth-card">
+        <div class="auth-card__header">
+          <a href="index.html" class="nav-brand" style="font-size: 1.25rem"
+            >Bytes Vault</a
+          >
+          <p class="muted">Set up your account</p>
+        </div>
+
+        <div
+          id="register-errors"
+          class="form-alert hidden"
+          role="alert"
+          aria-live="polite"
+        ></div>
+
+        <form id="registerForm" class="auth-form">
+          <div class="form-group">
+            <label class="input-label" for="name">Full Name</label>
+            <div class="input-field">
+              <span class="input-icon">👤</span>
+              <input
+                type="text"
+                id="name"
+                class="form-control"
+                placeholder="Ada Lovelace"
+                required
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="input-label" for="email">Email</label>
+            <div class="input-field">
+              <span class="input-icon">@</span>
+              <input
+                type="email"
+                id="email"
+                class="form-control"
+                placeholder="you@example.com"
+                required
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="input-label" for="password">Password</label>
+            <div class="input-field">
+              <span class="input-icon">•••</span>
+              <input
+                type="password"
+                id="password"
+                class="form-control"
+                placeholder="At least 8 characters"
+                required
+              />
+            </div>
+            <p class="field-hint">
+              Use 8+ characters with letters and numbers.
+            </p>
+          </div>
+          <button type="submit" class="btn-primary auth-submit">
+            Create account
+          </button>
+        </form>
+
+        <div class="auth-footer">
+          <p class="muted">
+            Already have an account? <a href="login.html">Login</a>
+          </p>
+        </div>
+      </div>
     </div>
 
-    <form id="registerForm">
-      <div class="form-group">
-        <input type="text" id="name" class="form-control" placeholder="Full Name" required />
-      </div>
-      <div class="form-group">
-        <input type="email" id="email" class="form-control" placeholder="Email" required />
-      </div>
-      <div class="form-group">
-        <input type="password" id="password" class="form-control" placeholder="Password" required />
-      </div>
-      <button type="submit" class="btn-primary">Register</button>
-    </form>
-
-    <div class="auth-footer">
-      <p>Already have an account? <a href="login.html">Login</a></p>
-    </div>
-  </div>
-
-  <script src="js/register-logic.js"></script>
-</body>
+    <script src="js/register-logic.js"></script>
+  </body>
 </html>
