--- a/public/profile.html
+++ b/public/profile.html
@@ -1,54 +1,83 @@
 <!-- public/profile.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Profile | Bytes Vault</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <a href="index.html" class="nav-brand">Bytes Vault</a>
-        <div class="nav-links">
-            <a href="shop.html">Shop</a>
-            <a href="cart.html">Cart</a>
-            <button id="logout-btn" style="background:none; border:none; color:#ddd; cursor:pointer; font-size:1rem; margin-left:15px;">Logout</button>
-        </div>
+      <a href="index.html" class="nav-brand">Bytes Vault</a>
+      <div class="nav-menu">
+        <a href="shop.html" class="nav-link">Shop</a>
+        <a href="cart.html" class="nav-link">Cart</a>
+        <button
+          id="logout-btn"
+          class="nav-btn danger"
+          style="margin-left: 0.75rem"
+        >
+          Logout
+        </button>
+      </div>
     </nav>
 
-    <div class="admin-container" style="margin-top: 2rem;">
-        <div class="dashboard-header">
-            <div>
-                <h1>My Account</h1>
-                <p>Welcome back, <span id="user-name" style="font-weight:bold;">User</span></p>
-            </div>
+    <div class="container profile-page">
+      <header class="profile-hero">
+        <div class="profile-identity">
+          <div id="user-avatar" class="avatar-circle">BV</div>
+          <div>
+            <p class="eyebrow">Account</p>
+            <h1>Welcome back, <span id="user-name">User</span></h1>
+            <p class="muted">
+              Manage your orders and keep your builds in sync.
+            </p>
+          </div>
         </div>
+        <div class="profile-stats">
+          <div class="stat-chip">
+            <span class="label">Total Orders</span>
+            <span id="order-count" class="value">—</span>
+          </div>
+          <div class="stat-chip">
+            <span class="label">Last Order</span>
+            <span id="last-order-date" class="value">—</span>
+          </div>
+        </div>
+      </header>
 
-        <div style="background: white; padding: 2rem; border-radius: 8px; margin-top: 1rem;">
+      <section class="profile-card">
+        <div class="section-header" style="margin-bottom: 1rem">
+          <div>
+            <p class="eyebrow">History</p>
             <h3>Order History</h3>
-            
-            <div class="table-responsive" style="margin-top: 1rem;">
-                <table style="width: 100%;">
-                    <thead>
-                        <tr>
-                            <th>Order ID</th>
-                            <th>Date</th>
-                            <th>Items</th>
-                            <th>Total</th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody id="order-history-body">
-                        <!-- JS Injects Rows Here -->
-                        <tr><td colspan="5">Loading orders...</td></tr>
-                    </tbody>
-                </table>
-            </div>
+          </div>
         </div>
+        <div class="table-responsive">
+          <table>
+            <thead>
+              <tr>
+                <th>Order ID</th>
+                <th>Date</th>
+                <th>Items</th>
+                <th>Total</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody id="order-history-body">
+              <!-- JS Injects Rows Here -->
+              <tr>
+                <td colspan="5" style="padding: 1.25rem; text-align: center">
+                  Loading orders...
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
     </div>
 
     <script src="js/profile.js"></script>
-</body>
+  </body>
 </html>
