polish landing apge

--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,122 @@
 <!-- public/index.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bytes Vault - Premium Electronics</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- Updated Navbar -->
     <nav class="navbar">
-        <a href="index.html" class="nav-brand">Bytes Vault</a>
-        <div class="nav-menu">
-            <a href="shop.html" class="nav-link">Shop</a>
-            <a href="cart.html" class="nav-link">Cart <span id="cart-count" class="badge" style="background:var(--primary); color:white; margin-left:5px;">(0)</span></a>
-            <a href="login.html" id="auth-link" class="nav-btn">Login</a>
-        </div>
+      <a href="index.html" class="nav-brand">Bytes Vault</a>
+      <div class="nav-menu">
+        <a href="shop.html" class="nav-link">Shop</a>
+        <a href="cart.html" class="nav-link"
+          >Cart
+          <span
+            id="cart-count"
+            class="badge"
+            style="background: var(--primary); color: white; margin-left: 2px"
+            >(0)</span
+          ></a
+        >
+        <a href="login.html" id="auth-link" class="nav-btn">Login</a>
+      </div>
     </nav>
 
-    <!-- Hero Section (Updated to fit container) -->
-    <div style="text-align: center; padding: 6rem 1rem; background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); color: white; border-radius: 0 0 24px 24px; margin-top:-1px;">
-        <h1 style="font-size: 3.5rem; margin-bottom: 1rem; font-weight: 800; letter-spacing: -1px;">Upgrade Your Setup</h1>
-        <p style="font-size: 1.25rem; margin-bottom: 2.5rem; color: #94a3b8;">The best GPUs, CPUs, and Peripherals in one vault.</p>
-        <a href="shop.html" class="btn-primary" style="padding: 1rem 2.5rem; font-size: 1.1rem; border-radius: 50px;">Browse Catalog</a>
-    </div>
+    <!-- Hero Section -->
+    <section class="landing-hero">
+      <div class="container hero-grid">
+        <div class="hero-copy">
+          <p class="eyebrow">Build faster. Game harder.</p>
+          <h1>Upgrade your setup with curated premium parts.</h1>
+          <p class="muted">
+            GPUs, CPUs, and peripherals vetted for performance, ready to ship.
+          </p>
+          <div class="hero-actions">
+            <a href="shop.html" class="btn-primary hero-cta">Browse catalog</a>
+            <a href="cart.html" class="btn-secondary">Go to cart</a>
+          </div>
+          <div class="hero-metrics">
+            <div class="metric-card">
+              <span class="label">Ready to ship</span>
+              <strong>1,500+</strong>
+            </div>
+            <div class="metric-card">
+              <span class="label">Avg. dispatch</span>
+              <strong>24h</strong>
+            </div>
+            <div class="metric-card">
+              <span class="label">Customer rating</span>
+              <strong>4.8</strong>
+            </div>
+          </div>
+        </div>
+        <div class="hero-panel">
+          <p class="eyebrow">Featured drop</p>
+          <h3>Next‑gen graphics, ready for your build.</h3>
+          <p class="muted">
+            Pair with high-bandwidth RAM and low-latency NVMe for the smoothest
+            frames.
+          </p>
+          <div class="hero-stack">
+            <span class="pill-soft">RTX / Radeon</span>
+            <span class="pill-soft">DDR5 kits</span>
+            <span class="pill-soft">PCIe 4.0 NVMe</span>
+          </div>
+          <a href="shop.html" class="btn-primary" style="margin-top: 1rem"
+            >See builds</a
+          >
+        </div>
+      </div>
+    </section>
+
+    <!-- Value Props -->
+    <section class="container value-grid">
+      <div class="value-card">
+        <h4>Curated performance</h4>
+        <p class="muted">
+          Handpicked SKUs that balance thermals, noise, and power draw.
+        </p>
+      </div>
+      <div class="value-card">
+        <h4>Warranty & support</h4>
+        <p class="muted">
+          RMA-friendly partners and fast replacements when you need them.
+        </p>
+      </div>
+      <div class="value-card">
+        <h4>Secure checkout</h4>
+        <p class="muted">
+          Encrypted payments and vault-grade account protection.
+        </p>
+      </div>
+    </section>
 
     <!-- Featured Section -->
-    <div class="container">
-        <h2 style="margin: 3rem 0 1.5rem 0; font-size: 1.8rem;">New Arrivals</h2>
-        <div class="product-grid" id="featured-grid">
-            <!-- JS will populate this -->
-            <p style="grid-column: 1/-1; text-align: center; color: #64748b;">Loading premium gear...</p>
+    <section class="container home-section">
+      <div class="section-header" style="margin-bottom: 1rem">
+        <div>
+          <p class="eyebrow">New arrivals</p>
+          <h2>Fresh gear in the vault</h2>
         </div>
-    </div>
+        <a href="shop.html" class="btn-secondary">View all</a>
+      </div>
+      <div class="product-grid" id="featured-grid">
+        <!-- JS will populate this -->
+        <p style="grid-column: 1/-1; text-align: center; color: #64748b">
+          Loading premium gear...
+        </p>
+      </div>
+    </section>
 
     <script src="js/shop.js"></script>
     <script src="js/cart.js"></script>
-</body>
+  </body>
 </html>
