--- a/public/shop.html
+++ b/public/shop.html
@@ -10,10 +10,18 @@
   <body>
     <nav class="navbar">
       <a href="index.html" class="nav-brand">Bytes Vault</a>
-      <div class="nav-links">
-        <a href="shop.html" style="color: white">Shop</a>
-        <a href="cart.html">Cart <span id="cart-count">(0)</span></a>
-        <a href="login.html" id="auth-link">Login</a>
+      <div class="nav-menu">
+        <a href="shop.html" class="nav-link active">Shop</a>
+        <a href="cart.html" class="nav-link"
+          >Cart
+          <span
+            id="cart-count"
+            class="badge"
+            style="background: var(--primary); color: white; margin-left: 6px"
+            >(0)</span
+          ></a
+        >
+        <a href="login.html" id="auth-link" class="nav-btn">Login</a>
       </div>
     </nav>
 
