--- a/public/shop.html
+++ b/public/shop.html
@@ -1,136 +1,103 @@
-<!-- public/shop.html -->
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Character encoding for correct text rendering -->
     <meta charset="UTF-8" />
-
-    <!-- Ensures responsive layout on mobile and tablets -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Page title shown in browser tab -->
     <title>Catalog - Bytes Vault</title>
-
-    <!-- Global stylesheet for layout and components -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <!-- Top navigation bar -->
     <nav class="navbar">
-      <!-- Brand logo / homepage link -->
       <a href="index.html" class="nav-brand">Bytes Vault</a>
-
-      <!-- Navigation links -->
       <div class="nav-menu">
-        <!-- Active link for current page -->
         <a href="shop.html" class="nav-link active">Shop</a>
-
-        <!-- Cart link with dynamic item count -->
         <a href="cart.html" class="nav-link">
-          Cart
-          <!-- Cart item count updated via JavaScript -->
-          <span id="cart-count" class="badge">(0)</span>
+          Cart <span id="cart-count" class="badge">(0)</span>
         </a>
-
-        <!-- Authentication link updated dynamically based on login state -->
         <a href="login.html" id="auth-link" class="nav-btn">Login</a>
       </div>
     </nav>
 
-    <!-- Main shop layout (sidebar + product grid) -->
+    <!-- Shop layout (sidebar + grid) -->
     <div class="shop-layout">
 
-      <!-- Sidebar filter panel -->
+      <!-- Sidebar filters -->
       <aside class="filter-panel">
-        <!-- Filter panel header -->
         <div class="filter-panel__header">
           <p class="eyebrow">Filters</p>
           <h3>Browse by category</h3>
           <p class="muted">Tap a pill to narrow the grid.</p>
         </div>
 
-        <!-- Category filter options -->
         <div class="filter-options">
-
-          <!-- All products (default selected) -->
-          <label class="pill-option">
-            <input
-              type="radio"
-              name="cat"
-              class="cat-filter"
-              value="All"
-              checked
-            />
-            <span>All Products</span>
-          </label>
-
-          <!-- Individual category filters -->
-          <label class="pill-option">
-            <input type="radio" name="cat" class="cat-filter" value="GPU" />
-            <span>GPU</span>
-          </label>
-
-          <label class="pill-option">
-            <input type="radio" name="cat" class="cat-filter" value="CPU" />
-            <span>CPU</span>
-          </label>
-
-          <label class="pill-option">
-            <input
-              type="radio"
-              name="cat"
-              class="cat-filter"
-              value="Motherboard"
-            />
-            <span>Motherboard</span>
-          </label>
-
-          <label class="pill-option">
-            <input type="radio" name="cat" class="cat-filter" value="RAM" />
-            <span>RAM</span>
-          </label>
-
-          <label class="pill-option">
-            <input type="radio" name="cat" class="cat-filter" value="Storage" />
-            <span>Storage</span>
-          </label>
-
-          <label class="pill-option">
-            <input type="radio" name="cat" class="cat-filter" value="Laptop" />
-            <span>Laptop</span>
-          </label>
-
-          <label class="pill-option">
-            <input type="radio" name="cat" class="cat-filter" value="Monitor" />
-            <span>Monitor</span>
-          </label>
-
-          <label class="pill-option">
-            <input
-              type="radio"
-              name="cat"
-              class="cat-filter"
-              value="Peripheral"
-            />
-            <span>Peripheral</span>
-          </label>
+          <label class="pill-option"><input type="radio" name="cat" checked /><span>All Products</span></label>
+          <label class="pill-option"><input type="radio" name="cat" /><span>GPU</span></label>
+          <label class="pill-option"><input type="radio" name="cat" /><span>CPU</span></label>
+          <label class="pill-option"><input type="radio" name="cat" /><span>Motherboard</span></label>
+          <label class="pill-option"><input type="radio" name="cat" /><span>RAM</span></label>
+          <label class="pill-option"><input type="radio" name="cat" /><span>Storage</span></label>
+          <label class="pill-option"><input type="radio" name="cat" /><span>Laptop</span></label>
+          <label class="pill-option"><input type="radio" name="cat" /><span>Monitor</span></label>
+          <label class="pill-option"><input type="radio" name="cat" /><span>Peripheral</span></label>
         </div>
       </aside>
 
-      <!-- Main content area -->
+      <!-- Main product grid -->
       <main class="shop-grid-wrapper">
-        <!-- Product grid populated dynamically via JavaScript -->
-        <div class="product-grid" id="shop-grid">
-          <p>Loading catalog...</p>
+        <div class="product-grid" id="grid">
+
+          <!-- Example Product 1: Low Stock -->
+          <div class="card">
+            <span class="badge low">Low Stock</span>
+            <img src="images/gpu1.jpg" width="200" />
+            <h3>NVIDIA RTX 4070</h3>
+            <p>₹79,999</p>
+            <p>Stock: 3</p>
+            <a href="product.html?id=1">View</a>
+          </div>
+
+          <!-- Example Product 2: Out of Stock -->
+          <div class="card">
+            <span class="badge out">Out of Stock</span>
+            <img src="images/cpu1.jpg" width="200" />
+            <h3>Intel Core i9-13900K</h3>
+            <p>₹54,999</p>
+            <p>Stock: 0</p>
+            <a href="product.html?id=2" style="pointer-events:none;opacity:0.6">View</a>
+          </div>
+
+          <!-- Example Product 3: In Stock -->
+          <div class="card">
+            <img src="images/ram1.jpg" width="200" />
+            <h3>Corsair Vengeance 16GB</h3>
+            <p>₹7,999</p>
+            <p>Stock: 12</p>
+            <a href="product.html?id=3">View</a>
+          </div>
+
+          <!-- Example Product 4: Low Stock -->
+          <div class="card">
+            <span class="badge low">Low Stock</span>
+            <img src="images/motherboard1.jpg" width="200" />
+            <h3>ASUS ROG Strix Z790</h3>
+            <p>₹34,999</p>
+            <p>Stock: 2</p>
+            <a href="product.html?id=4">View</a>
+          </div>
+
+          <!-- Example Product 5: In Stock -->
+          <div class="card">
+            <img src="images/ssd1.jpg" width="200" />
+            <h3>Samsung 1TB NVMe SSD</h3>
+            <p>₹8,499</p>
+            <p>Stock: 20</p>
+            <a href="product.html?id=5">View</a>
+          </div>
+
         </div>
       </main>
     </div>
-
-    <!-- JavaScript for product rendering and filtering -->
-    <script src="js/shop.js"></script>
-
-    <!-- JavaScript for cart state and cart count updates -->
-    <script src="js/cart.js"></script>
   </body>
 </html>
