--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -337,7 +337,13 @@
         </div>
     </div>
 
+    <!-- REQUIRED: Socket.io -->
     <script src="/socket.io/socket.io.js"></script>
+    
+    <!-- FIX: Add Chart.js Library -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- Admin Logic -->
     <script src="js/admin.js"></script>
 </body>
 </html>
